[BUGFIX] news-single page navigation 'next record link' aligned to left when no 'previous record link'. (#500)

--- a/Resources/Public/less/main.less
+++ b/Resources/Public/less/main.less
@@ -4135,7 +4135,6 @@
         &__prev,
         &__next {
             width: 50%;
-            float: left;
             position: relative;
 
             &:before,
@@ -4146,6 +4145,7 @@
         }
 
         &__next {
+            float: right;
             text-align: right;
             padding: 0 25px 0 15px;
 
@@ -4157,6 +4157,7 @@
         }
 
         &__prev {
+            float: left;
             padding: 0 15px 0 25px;
 
             .link-arrow--circle();
